--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.3.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-router-dom": "^6.15.0",
