--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "portloio",
+  "name": "ortfolio-fiesta",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/itcreativeusa/portfolio-fiesta",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
@@ -11,6 +12,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.3.1",
+    "gh-pages": "^6.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^17.0.1",
@@ -20,6 +22,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
