--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ortfolio-fiesta",
+  "name": "portfolio-fiesta",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/itcreativeusa/portfolio-fiesta",
+  "homepage": "https://itcreativeusa.github.io/portfolio-fiesta",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
